--- a/public/scss/pages/_project.scss
+++ b/public/scss/pages/_project.scss
@@ -3,6 +3,7 @@
  */
 
 #project {
+  //margin-bottom: 6rem;
   img {
     max-width: 100%;
   }
@@ -362,7 +363,7 @@
 }
 
 .project-dau-visual {
-  @include link-hover(#F0647E);
+  @include link-hover(#FA7E8C);
 }
 
 .project-designatucsd {
